fix: colleagues page contrast

--- a/apps/frontend/src/app/modules/misc/components/colleagues/colleagues.component.scss
+++ b/apps/frontend/src/app/modules/misc/components/colleagues/colleagues.component.scss
@@ -83,7 +83,7 @@
   }
 
   .subject {
-    color: #999;
+    color: #707070;
     margin: 5px 0 10px;
   }
 
@@ -110,7 +110,7 @@
     -webkit-tap-highlight-color: transparent;
 
     &.active {
-      color: #009cff;
+      color: #0074be;
     }
   }
 }
